# Zconfig

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: convention.md  language.md  language.proposal.md
include/: error.hpp
include/zconfig/: ast.hpp  error.hpp  expressions.hpp  fs.hpp  generator.hpp  log.hpp  parser.hpp  registry.hpp  search.hpp  tui.hpp  types.hpp
src/: ast.cpp  fs.cpp  fs.hpp  generator.cpp  main.cpp  parser.cpp  registry.cpp  tui.cpp
